# AEB-Safety-Critical-Decision-Engine-Prototype

./: .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  README_MODULARIZATION.md  docker-compose.sonar.yml  main.py  pyproject.toml  service.py  sonar-project.properties
aeb/: __init__.py  _shim.py  aeb_gui.py  constants.py  decision.py  enums.py  models.py  sensors.py  simulation.py  system.py  theme.py  threat.py
aeb/core/: constants.py  decision.py  enums.py  models.py  sensors.py  simulation.py  system.py  threat.py
aeb/ui/components/: canvas_view.py
aeb/ui/components/panels/: controls_panel.py  history_panel.py  metrics_panel.py  status_panel.py
aeb_safety_decision_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: CI_WEBHOOKS.md  SONARQUBE_SETUP.md
tests/: test_aeb_basic.py  test_gui_utils.py
